Fix invisible coordinate background on console

--- a/style/index.css
+++ b/style/index.css
@@ -421,7 +421,7 @@ header, #bar .bar {
 
 .comment-coord, .comment-variation {
         padding: 0 5px;
-        background: #101010;
+        background: #050505;
         color: white;
         border-radius: 3px;
         cursor: default;
